--- a/src/main/webapp/css/freedomHomeStyleMC.css
+++ b/src/main/webapp/css/freedomHomeStyleMC.css
@@ -16,18 +16,22 @@ root {
 }
 
 body{
-  background:url(../images/background_9.png) repeat-x scroll top left #000000;
+  background:url(../images/background-body.png) repeat-x scroll top left #F2F2F2;
   position:relative;  
 }
 
 .masterContainer{
   margin:0 auto;
-  width:930px;
+  width:960px;
   background-color:#FFFFFF;
 }
 
 .homeContentWrapper{
   margin:-8px 0px 0px 0px;
+
+  -moz-box-shadow:1px 5px 25px 5px #000000;
+  -webkit-box-shadow:1px 5px 25px 5px #000000;
+  box-shadow: 1px 5px 25px 5px #000000
 }
 
 .defaultHide{
@@ -36,9 +40,10 @@ body{
 
 /********************************* HEADER ********************************/
 .headerPart {
+  margin:0 auto;
   height: 80px;
   padding-bottom: 30px;
-  width: 100%;
+  width: 960px;
 }
 
 .logoContainer {
@@ -53,7 +58,7 @@ body{
 }
 
 .logoContainer label {
-  color: #8A084B;
+  color: #fbad3e;
   font-family: serif;
   font-size: 21px;
   font-style: italic;
@@ -72,6 +77,7 @@ body{
 
 .menuContainer{
   background:url(../images/topblue.jpg) repeat-x scroll top left #08088A;
+  /*background:url(../images/) repeat-x scroll top left #000;*/
   width:593px;
   height:50px;
   float:right;
@@ -80,8 +86,8 @@ body{
 
 .menuContainer ul{
   list-style:none;
-  margin-left:0px;
-  margin-top:12px;
+  margin-left:55px;
+  margin-top:14px;
 }
 
 .menuContainer ul li{
@@ -94,7 +100,7 @@ body{
   font-size:13px;
   font-weight:bold;
   letter-spacing:-0.5px;
-  color:#FFFFFF;
+  color:#fbad3e;
   text-decoration:none;
 }
 
@@ -111,88 +117,13 @@ body{
 /********************************** BANNER *********************************/
 .bannerPart{
   width:100%;
-  height:290px;
+  height:350px;  
 }
 
 .bannerSlideShow{
-  background:url(../images/main_callout_bg.png) no-repeat scroll top left transparent;
-  width:676px;
-  height:288px;
-  margin:0px 0px 0px -30px;
-  float:left;
-}
-
-.bannerRightpart{
-  background:url(../images/img_1.jpg) repeat scroll top left transparent;
-  width:275px;
-  float:right;
-  margin-top:5px;
-  margin-right:-20px;
-  height:275px;
-
-  -moz-border-radius:0.7em 0.7em 0.7em 0.7em;
-  -webkit-border-radius:0.7em 0.7em 0.7em 0.7em;
-  border-radius:0.7em 0.7em 0.7em 0.7em;
-  -moz-box-shadow:5px 5px 5px #888;
-  -webkit-box-shadow:5px 5px 5px #888;
-  box-shadow: 10px 10px 5px #888;
-}
-
-.bannerRightpart p{
-  margin:35px 15px 5px 15px;
-  padding-bottom:10px;
-  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
-  font-size:13px;
-  line-height:18px;
-  text-indent:inherit;
-  color:#190710;  
-  border-bottom:1px solid #FFFFFF;
-}
-
-.bannerRightpart label{  
-  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
-  font-weight:bold;
-  font-size:15px;
-  text-indent:inherit;
-  color:#000000;  
-  margin-left:160px;
-}
-
-.bannerRightpart div{
-  margin-top:110px;
-  margin-left:70px;
-  padding-right:15px;
-  text-align:right;
-}
-.bannerRightpart label.a1{
-  font-family:Arial,Trebuchet-MS,sans-serif;
-  font-size:9px;
-  margin-left:20px;
-  text-align:left;
-}
-
-.contentLeft h3{
-  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
-  font-size:16pt;
-  color:#FFFFFF;;
-  margin:20px 0px 10px 15px;
-}
-
-.contentLeft h4{
-  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
-  font-size:12pt;
-  color:#151515;
-  margin:4px 0px 0px 15px;
-}
-
-.contentLeft p{
-  margin:15px 15px 0px 15px;
-  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
-  font-size:13px;
-  line-height:20px;
-  text-indent:inherit;
-  color:#190710;
-  text-align: justify;
+  /*  background:url(../images/main_callout_bg.png) no-repeat scroll top left transparent;*/
+  width:760px;
+  height:350px; 
 }
 
 /*************************** IMAGE SLIDER *******************************/
@@ -201,16 +132,17 @@ img{
 }
 
 #bannerSlideShow .mainContents{
-  margin:20px 0px 0px 20px;
+  margin:0px 0px 0px 0px;
 }
 
 .slideImageHolder{
-  background-color:#000;
-  width:420px;
-  padding:10px;
-  -moz-border-radius:0.7em 0.7em 0.7em 0.7em;
-  -webkit-border-radius:0.7em 0.7em 0.7em 0.7em;
-  border-radius:0.7em 0.7em 0.7em 0.7em;  
+  background-color:#FFFFFF;
+  width:950px;
+  padding:5px;
+
+  /*  -moz-border-radius:0.7em 0.7em 0.7em 0.7em;
+    -webkit-border-radius:0.7em 0.7em 0.7em 0.7em;
+    border-radius:0.7em 0.7em 0.7em 0.7em;  */
 }
 
 .thumbnails{
@@ -252,10 +184,10 @@ img{
   font-size:13px;
   font-weight:bold;
   letter-spacing:1px;
-  color:#000000;
+  color:#CC9C38;
   position:absolute;
   letter-spacing:0px;
-  margin:-238px 0 0 440px;
+  margin:-330px 0 0 740px;
   width:160px;
   height:120px;  
   padding:7px;
@@ -269,15 +201,18 @@ img{
 /*################################## CONTENT PART ###########################*/
 .variableContentPart{
   width:100%;
-  height:400px;
+  height:310px;
+  margin:20px 0px 0px 0px;
   padding:20px 0px 20px 0px;
 }
 
 .contentLeft{
-  background:url(../images/img_1.jpg) repeat scroll top left transparent;
-  height:395px;
-  width:300px;
-  margin:0px 0px 0px -30px;
+/*  background:url(../images/golden_glossy_1.jpg) repeat scroll top left transparent;*/
+  background-color:#CC9C38;
+/*  background-color:#fbad3e;*/
+  height:290px;
+  width:580px;
+  margin:0px 0px 0px 10px;
   float:left;
 
   -moz-border-radius:0.7em 0.7em 0.7em 0.7em;
@@ -289,20 +224,44 @@ img{
   box-shadow: -5px 5px 10px 0px #888888;
 }
 
-.contentRight{
-  background:url(../images/heart-2.jpg) no-repeat scroll top #FFFFFF;
-  width:640px;
+.contentLeft h3{
+  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
+  font-size:16pt;
+  color:#FFFFFF;;
+  margin:20px 0px 10px 15px;
+}
+
+.contentLeft h4{
+  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
+  font-size:12pt;
+  color:#151515;
+  margin:4px 0px 0px 15px;
+}
+
+.contentLeft p{
+  margin:15px 15px 0px 15px;
+  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
+  font-size:13px;
+  line-height:25px;
+  text-indent:inherit;
+  color:#190710;
+  text-align: justify;
+}
+
+.contentRight{  
+  width:350px;
   float:right;
-  height:390px;
-  margin:0px -20px 0px 0px;
+  height:290px;
+  margin:0px 10px 0px 0px;
+  background-color:#B40404;
 
   -moz-border-radius:0.7em 0.7em 0.7em 0.7em;
   -webkit-border-radius:0.7em 0.7em 0.7em 0.7em;
   border-radius:0.7em 0.7em 0.7em 0.7em;
   /*  -moz-box-shadow:0 0px 5px 5px #c8005b;*/
-  -moz-box-shadow:0 0px 20px 5px #FA58AC;
-  -webkit-box-shadow:0 0px 20px 5px #FA58AC;
-  box-shadow:0 0px 20px 5px #FA58AC;
+  -moz-box-shadow:0 0px 20px 5px #A1A1A1;
+  -webkit-box-shadow:0 0px 20px 5px #A1A1A1;
+  box-shadow:0 0px 20px 5px #A1A1A1;
 }
 
 .contentRightImageContainer{
@@ -311,6 +270,40 @@ img{
   width:580px;
   padding:5px;
   margin:40px 0px 0px 30px;
+}
+
+
+.contentRight p{
+  margin:35px 15px 5px 15px;
+  padding-bottom:10px;
+  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
+  font-size:13px;
+  line-height:18px;
+  text-indent:inherit;
+  color:#190710;
+  border-bottom:1px solid #FFFFFF;
+}
+
+.contentRight label{
+  font-family:Arial,Trebuchet-MS,sans-serif,Helvetica;
+  font-weight:bold;
+  font-size:15px;
+  text-indent:inherit;
+  color:#000000;
+  margin-left:160px;
+}
+
+.contentRight div{
+  margin-top:110px;
+  margin-left:70px;
+  padding-right:15px;
+  text-align:right;
+}
+.contentRight label.a1{
+  font-family:Arial,Trebuchet-MS,sans-serif;
+  font-size:9px;
+  margin-left:20px;
+  text-align:left;
 }
 
 /*################################## CONTENT PART ###########################*/
