--- a/src/main/webapp/css/freedomHomeStyleMC.css
+++ b/src/main/webapp/css/freedomHomeStyleMC.css
@@ -60,7 +60,7 @@ body{
 .logoContainer label {
   color: #fbad3e;
   font-family: serif;
-  font-size: 21px;
+  font-size: 16px;
   font-style: italic;
   font-weight: bold;
   letter-spacing: -0.8px;
@@ -69,10 +69,10 @@ body{
 }
 
 .logoContainer div {
-  left: 87px;
+  left: 100px;
   position: absolute;
   text-align: center;
-  top: 26px;
+  top: 35px;
 }
 
 .menuContainer{
@@ -106,7 +106,7 @@ body{
 
 .menuContainer ul li a:hover{
   text-decoration:underline;
-  color:#FE2E9A;
+  color:#FF0000;
 }
 
 .menuContainer ul li a.activeTab{
@@ -117,7 +117,7 @@ body{
 /********************************** BANNER *********************************/
 .bannerPart{
   width:100%;
-  height:350px;  
+  height:395px;
 }
 
 .bannerSlideShow{
@@ -137,64 +137,72 @@ img{
 
 .slideImageHolder{
   background-color:#FFFFFF;
-  width:950px;
-  padding:5px;
+  width:960px;
 
   /*  -moz-border-radius:0.7em 0.7em 0.7em 0.7em;
     -webkit-border-radius:0.7em 0.7em 0.7em 0.7em;
     border-radius:0.7em 0.7em 0.7em 0.7em;  */
 }
 
-.thumbnails{
-  position:absolute;  
-  margin:-150px 0px 0px 475px;
+.thumbnails {
+  margin:-72px 0 0;  
+  position: absolute;
+  width: auto;
+  z-index:100;
 }
 
+/*.thumbnails .thumbnailsInside{
+  background-color:#FFFFFF;
+  height:50px;
+}*/
+
 .thumbnails ul{
-  margin-left:-35px;
-  margin-top:70px;
+  margin-left:0px;
+  margin-top:15px;
+  margin-bottom:0px;
   list-style:none;
 }
 .thumbnails ul li{
   display: inline;  
 }
 
-.thumbnail_1{
+.thumbnail{
   float:left;
   margin-right:4px;
-  margin-bottom:10px;  
-}
-
-.thumbnail_2{
-  float:left;
-  margin-right:4px;    
+  margin-bottom:18px;  
 }
 
 .thumbnailContent{
-  border:1px solid #FFFFFF;
+  border:1px solid #000;
+  background-color:#000;
+  padding:3px;
+  opacity:0.7;
+
 }
 
 
 .thumbnailContent:hover{
-  border:1px solid #FA58AC;
+  border:1px solid #FF0000;
 }
 
-.captions{
-  font-family:cursive,sans-serif,Arial,Trebuchet-MS;
-  font-size:13px;
-  font-weight:bold;
-  letter-spacing:1px;
-  color:#CC9C38;
-  position:absolute;
-  letter-spacing:0px;
-  margin:-330px 0 0 740px;
-  width:160px;
-  height:120px;  
-  padding:7px;
+.captions {
+  background-color: #000000;
+  color: #CC9C38;
+  font-family: cursive,sans-serif,Arial,Trebuchet-MS;
+  font-size: 11px;
+  font-weight: bold;
+  height: 60px;
+  letter-spacing: 0;
+  margin: -75px 0 0 566px;
+  opacity: 0.7;
+  padding: 7px;
+  position: absolute;
+  width: 380px;
+  z-index: 1000;
 }
 
 .activeProDtTmb{
-  border:1px solid #FA58AC;
+  border:1px solid #FF0000;
 }
 /********************************** BANNER *********************************/
 
@@ -207,9 +215,9 @@ img{
 }
 
 .contentLeft{
-/*  background:url(../images/golden_glossy_1.jpg) repeat scroll top left transparent;*/
+  /*  background:url(../images/golden_glossy_1.jpg) repeat scroll top left transparent;*/
   background-color:#CC9C38;
-/*  background-color:#fbad3e;*/
+  /*  background-color:#fbad3e;*/
   height:290px;
   width:580px;
   margin:0px 0px 0px 10px;
@@ -290,7 +298,7 @@ img{
   font-size:15px;
   text-indent:inherit;
   color:#000000;
-  margin-left:160px;
+  margin-left:240px;
 }
 
 .contentRight div{
@@ -322,12 +330,12 @@ img{
   font-size:12px;
   font-weight:bold;
   letter-spacing:1px;
-  color:#FFFFFF;
+  color:#FBAD3E;
 }
 
 .copyrightDiv a{
   font-family:Arial,Trebuchet-MS,sans-aserif;
-  font-size:13px;
+  font-size:12px;
   text-decoration:none;
   color:#15ADFF;
 }
