--- a/src/main/webapp/css/freedomHomeStyleMC.css
+++ b/src/main/webapp/css/freedomHomeStyleMC.css
@@ -16,7 +16,7 @@ root {
 }
 
 body{
-  background:url(../images/background-body.png) repeat-x scroll top left #F2F2F2;
+  background:url(../images/background-body-new.png) repeat-x scroll top left transparent;
   position:relative;  
 }
 
@@ -27,7 +27,7 @@ body{
 }
 
 .homeContentWrapper{
-  margin:-8px 0px 0px 0px;
+  margin:50px 0px 0px 0px;
 
   -moz-box-shadow:1px 5px 25px 5px #000000;
   -webkit-box-shadow:1px 5px 25px 5px #000000;
@@ -50,7 +50,7 @@ body{
   float: left;
   margin-left: 2px;
   position: relative;
-  width: 335px;
+  width: 900px;
 }
 
 .logoContainer img{
@@ -58,56 +58,63 @@ body{
 }
 
 .logoContainer label {
-  color: #fbad3e;
-  font-family: serif;
-  font-size: 16px;
+  color: Sienna;
+  /*  font-family: sans-serif;*/
+  font-size: 31px;
   font-style: italic;
-  font-weight: bold;
+  font-weight: bolder;
   letter-spacing: -0.8px;
   text-align: center;
   text-transform: capitalize;
 }
 
 .logoContainer div {
-  left: 100px;
+  left: 81px;
   position: absolute;
   text-align: center;
-  top: 35px;
+  top: 47px;
 }
 
 .menuContainer{
-  background:url(../images/topblue.jpg) repeat-x scroll top left #08088A;
+  /*background:url(../images/topblue.jpg) repeat-x scroll top left #08088A;
   /*  background:url(../images/bluebg.png) repeat scroll top left transparent;*/
+  /*background:url(../images/menucontainer.png) repeat-y scroll;*/
+  background-color: #ed1c24;
   position:relative;
-  width:600px;
-  height:50px;
+  width:960px;
+  height:35px;
   float:right;
-  margin-top: 26px;
+  margin-top: 11px;
+  -moz-border-radius: 0.7em 0.7em 0.7em 0.7em;
+  -moz-box-shadow: 0px 1px 7px 5px #ddd;
+  -webkit-border-radius: 0.7em 0.7em 0.7em 0.7em;
+  -webkit-box-shadow: 0px 1px 7px 5px #ddd;
 }
 
 .menuContainer ul{
   list-style:none;
   margin-left:-25px;
-  margin-top:14px;
+  margin-top:4px;
 }
 
 .menuContainer ul li{
   display:inline;
-  margin:0px 8px 0px 0px;
+  margin:0px 25px;
 }
 
 .menuContainer ul li a{
   font-family:Arail,Trebuchet-MS,Helvetica,Tahoma,sans-serif;
-  font-size:13px;
+  font-size:14px;
   font-weight:bold;
-  letter-spacing:-0.5px;
-  color:#fbad3e;
+  letter-spacing:0.5px;
+  /*color:#fbad3e;*/
+  color:BlanchedAlmond;
   text-decoration:none;
 }
 
 .menuContainer ul li a:hover{
   text-decoration:underline;
-  color:#FF0000;
+  color:black;
 }
 
 .menuContainer ul li a.activeTab{
@@ -187,7 +194,8 @@ img{
 }
 
 .captions {
-  background-color: #000000;
+  background:url(../images/red_pull_1.png) repeat scroll top left transparent;
+/*  background-color: #ed1c24;*/
   color: #CC9C38;
   font-family: cursive,sans-serif,Arial,Trebuchet-MS;
   font-size: 11px;
@@ -195,11 +203,12 @@ img{
   height: 60px;
   letter-spacing: 0;
   margin: -75px 0 0 566px;
-  opacity: 0.7;
+/*  opacity: 0.1;*/
   padding: 7px;
   position: absolute;
   width: 380px;
   z-index: 1000;
+  display:none;
 }
 
 .activeProDtTmb{
