Add inqury form
Signed-off-by: uzzal <uzzal@smartitengineering.com>

--- a/src/main/webapp/css/freedomHomeStyleIE.css
+++ b/src/main/webapp/css/freedomHomeStyleIE.css
@@ -255,7 +255,7 @@ img{
 }
 
 .contentRight{
-  background:url(../images/right_1.png) repeat scroll top left transparent;
+  background:url(../images/red_pull_1.png) repeat scroll top left transparent;
   width:350px;
   float:right;
   height:290px;
