--- a/src/main/webapp/css/freedomHomeStyleMC.css
+++ b/src/main/webapp/css/freedomHomeStyleMC.css
@@ -258,7 +258,7 @@ img{
 }
 
 .contentRight{
-  background:url(../images/right_1.png)repeat scroll top left transparent;
+  background:url(../images/red_pull_1.png)repeat scroll top left transparent;
   width:350px;
   float:right;
   height:290px;
