--- a/src/main/webapp/css/freedomHomeStyleMC.css
+++ b/src/main/webapp/css/freedomHomeStyleMC.css
@@ -225,7 +225,7 @@ img{
 }
 
 .contentLeft{
-  background:url(../images/left_1.png) repeat scroll top left transparent;
+  background:url(../images/mission-background.png) repeat scroll top left transparent;
   /*  background-color:#CC9C38;*/
   /*  background-color:#fbad3e;*/
   height:290px;
