--- a/src/main/webapp/css/freedomHomeStyleMC.css
+++ b/src/main/webapp/css/freedomHomeStyleMC.css
@@ -328,9 +328,9 @@ img{
 /*################################## CONTENT PART ###########################*/
 
 .footerPart{
-  background:url(../images/topblue_1.jpg) repeat-x scroll top left #FFFFFF;
+/*  background:url(../images/topblue_1.jpg) repeat-x scroll top left #FFFFFF;*/
   width:100%;
-  height:70px;  
+  height:0px;  
 }
 
 .copyrightDiv{
