--- a/src/main/webapp/css/orderPage.css
+++ b/src/main/webapp/css/orderPage.css
@@ -49,9 +49,9 @@ root {
 
 .labelColumnContainer label{
   font-family:Arial,Trebuchet-MS,Helvetica,sans-serif;
-  font-size:17px;
+  font-size:14px;
   color:#190707;
-  letter-spacing:1px;  
+  letter-spacing:0.7px;
 }
 /******************************** FORM LABEL ****************************/
 
@@ -138,25 +138,44 @@ root {
   color:#088A08;  
 }
 
-.rowAddContainer img{border:medium none;}
+.mandatoryBoxContainer{
+  width:100%;
+  padding-bottom:20px;
+}
+
+.mandatoryBoxContainer input{
+  border: 1px outset #FF0000;
+  height:22px;
+}
+
+.mandatoryLabel{
+  float:left;
+  padding:0px 3px;
+}
+
+.mandatoryText{
+float:left;
+padding:6px 5px 0px 5px;
+}
+
+.singleMandatory{
+  float:left;
+  width:30%;
+}
 
 .commentLabel{
   margin:10px 0px 10px 0px;
 }
 
 .commentLabel label{
-  font-family:Arial,Trebuchet-MS,sans-serif;
-  font-size:15px;
-  letter-spacing:1px;
+  font-family:sans-serif;
+  font-size:14px;
+  letter-spacing:0.7px;
 }
 
-.commentContainer textarea,.commentContainer input{
+.commentContainer textarea{
   border: 1px outset #FF0000;
   padding:8px;
-}
-
-.commentContainer input{
-  height:10px;
 }
 
 .commentLeft{
@@ -166,7 +185,7 @@ root {
 
 .commentRight{
   float:right;
-  width:250px;
+  width:300px;
 }
 
 .submitBtnContainer{
